* 修正链路跟踪的配置

--- a/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
@@ -9,7 +9,9 @@
 - ngnix反向代理
   80/443 或 18080/18443
 - nexus
-  8081/8082/8083 或 18081/18082/18083  
+  8081/8082/8083 或 18081/18082/18083
+- zipkin
+  9411 或 19411
 
 ## 2. 安装Docker及相关环境
 
