--- a/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
@@ -12,23 +12,25 @@
   80/443 或 18080/18443
 - nexus
   8081/8082/8083 或 18081/18082/18083
-- zipkin
-  9411 或 19411
 
-## 2. 安装Docker及相关环境
+## 2. 同步网络更新服务器时间
+
+<https://github.com/nnzbz/notes/blob/master/linux/07.%E5%90%8C%E6%AD%A5%E7%BD%91%E7%BB%9C%E6%97%B6%E9%97%B4.md>
+
+## 3. 安装Docker及相关环境
 
 - Docker
   <https://github.com/nnzbz/notes/blob/master/docker/Docker%E5%85%A5%E9%97%A8.md>
 - Swarm
   <https://github.com/nnzbz/notes/blob/master/docker/Swarm/Swarm%E7%AE%80%E4%BB%8B.md>
 
-## 3. 创建并运行 `Docker` 私服
+## 4. 创建并运行 `Docker` 私服
 
 **注意:** 请使用文档中的 `Swarm` 安装方案
 <https://github.com/nnzbz/notes/blob/master/docker/%E5%B8%B8%E7%94%A8%E9%95%9C%E5%83%8F%E4%B8%8E%E5%AE%B9%E5%99%A8/Nexus.md>
 <https://github.com/nnzbz/notes/blob/master/docker/Docker%E7%A7%81%E6%9C%8D.md>
 
-## 4. 创建虚拟网络
+## 5. 创建虚拟网络
 
 提供给docker容器互联使用
 
@@ -36,7 +38,7 @@
 docker network create -d overlay --attachable rebue
 ```
 
-## 5. 创建并运行常用容器
+## 6. 创建并运行常用容器
 
 **注意:** 请使用文档中的 `Swarm` 安装方案，在 Docker Compose文件中加入如下内容，以便容器能互联互通
 
