--- a/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
@@ -30,6 +30,10 @@
 <https://github.com/nnzbz/notes/blob/master/docker/%E5%B8%B8%E7%94%A8%E9%95%9C%E5%83%8F%E4%B8%8E%E5%AE%B9%E5%99%A8/Nexus.md>
 <https://github.com/nnzbz/notes/blob/master/docker/Docker%E7%A7%81%E6%9C%8D.md>
 
+## 初始化 Swarm 环境
+
+<>
+
 ## 5. 创建虚拟网络
 
 提供给docker容器互联使用
