--- a/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
@@ -7,11 +7,21 @@
 注意需要浏览器访问的端口应避免分配 [err_unsafe_port](err_unsafe_port.md) 的端口
 
 - SSH
-  22 或 18022
+  18022:22
 - ngnix反向代理
-  80/443 或 18080/18443
+  18080:80/18443:443
 - nexus
-  8081/8082/8083 或 18081/18082/18083
+  18081:8081/18082:8082/18083:8083
+- minio
+  9000/9001
+- torna
+  7700
+- xxl_job_admin
+  11080:8080
+- nacos
+  8848/8849/8850
+- zipkin
+  9411
 
 ## 2. 同步网络更新服务器时间
 
@@ -30,11 +40,11 @@
 <https://github.com/nnzbz/notes/blob/master/docker/%E5%B8%B8%E7%94%A8%E9%95%9C%E5%83%8F%E4%B8%8E%E5%AE%B9%E5%99%A8/Nexus.md>
 <https://github.com/nnzbz/notes/blob/master/docker/Docker%E7%A7%81%E6%9C%8D.md>
 
-## 初始化 Swarm 环境
+## 5. 初始化 Swarm 环境
 
-<>
+<https://github.com/nnzbz/notes/blob/master/docker/Swarm/Swarm%E7%AE%80%E4%BB%8B.md>
 
-## 5. 创建虚拟网络
+## 6. 创建虚拟网络
 
 提供给docker容器互联使用
 
@@ -42,7 +52,7 @@
 docker network create -d overlay --attachable rebue
 ```
 
-## 6. 创建并运行常用容器
+## 7. 创建并运行常用容器
 
 **注意:** 请使用文档中的 `Swarm` 安装方案，在 Docker Compose文件中加入如下内容，以便容器能互联互通
 
@@ -63,6 +73,8 @@ networks:
   <https://github.com/nnzbz/notes/blob/master/docker/%E5%B8%B8%E7%94%A8%E9%95%9C%E5%83%8F%E4%B8%8E%E5%AE%B9%E5%99%A8/MySQL/MySQL.md>
 - MinIO
   <https://github.com/nnzbz/notes/blob/master/docker/%E5%B8%B8%E7%94%A8%E9%95%9C%E5%83%8F%E4%B8%8E%E5%AE%B9%E5%99%A8/MinIO.md>
+- Torna
+  <https://github.com/nnzbz/notes/blob/master/docker/%E5%B8%B8%E7%94%A8%E9%95%9C%E5%83%8F%E4%B8%8E%E5%AE%B9%E5%99%A8/torna.md>
 - xxl-job-admin
   <https://github.com/nnzbz/notes/blob/master/docker/%E5%B8%B8%E7%94%A8%E9%95%9C%E5%83%8F%E4%B8%8E%E5%AE%B9%E5%99%A8/xxl-job-admin.md>
 - Nacos
