* 更新帮助文档

--- a/src/main/resources/archetype-resources/doc/缓存开发指南/缓存开发指南.md
+++ b/src/main/resources/archetype-resources/doc/缓存开发指南/缓存开发指南.md
@@ -38,9 +38,13 @@
    ```yaml
     spring:
         redis:
-            host: 127.0.0.1
-            port: 6379
-            password: xxxxx
+	      password: xxxxxxxx
+		  sentinel:
+		    master: mymaster
+		    nodes:
+		      - redis_sentinel1:26379
+		      - redis_sentinel2:26379
+		      - redis_sentinel3:26379
    ```
 
 5. **Spring Cache** 注解
