--- a/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
@@ -42,7 +42,7 @@
 
 ## 5. 创建虚拟网络
 
-提供给docker容器互联使用
+创建虚拟网络提供给docker容器互联使用，在 `Manager` 节点运行如下命令:
 
 ```sh
 docker network create -d overlay --attachable rebue
