--- a/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
@@ -23,11 +23,15 @@
 - zipkin
   9411
 
-## 2. 同步网络更新服务器时间
+## 2. 修改hostname
+
+<https://github.com/nnzbz/notes/blob/master/linux/03.Linux%E5%B8%B8%E7%94%A8%E5%91%BD%E4%BB%A4.md>
+
+## 3. 同步网络更新服务器时间
 
 <https://github.com/nnzbz/notes/blob/master/linux/07.%E5%90%8C%E6%AD%A5%E7%BD%91%E7%BB%9C%E6%97%B6%E9%97%B4.md>
 
-## 3. 安装Docker及相关环境
+## 4. 安装Docker及相关环境
 
 - Docker
   <https://github.com/nnzbz/notes/blob/master/docker/Docker%E5%85%A5%E9%97%A8.md>
@@ -36,11 +40,11 @@
 - NFS
   上一篇的 `共享存储NFS` 章节
 
-## 4. 初始化 Swarm 环境
+## 5. 初始化 Swarm 环境
 
 <https://github.com/nnzbz/notes/blob/master/docker/Swarm/Swarm%E7%AE%80%E4%BB%8B.md>
 
-## 5. 创建虚拟网络
+## 6. 创建虚拟网络
 
 创建虚拟网络提供给docker容器互联使用，在 `Manager` 节点运行如下命令:
 
@@ -48,7 +52,7 @@
 docker network create -d overlay --attachable rebue
 ```
 
-## 6. 创建并运行常用容器
+## 7. 创建并运行常用容器
 
 **注意:** 请使用文档中的 `Swarm` 安装方案，在 Docker Compose文件中加入如下内容，以便容器能互联互通
 
