* 更新帮助文档

--- a/src/main/resources/archetype-resources/doc/微服务快速开发指南/微服务快速开发指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务快速开发指南/微服务快速开发指南.md
@@ -86,16 +86,22 @@ docker network create --attachable rebue
    ![配置参数](配置参数.png)
 5. 项目建成
 
-### 2.3. 数据库设计与初始化
+### 2.3. 数据库设计
 
-1. 数据库设计(按规范放于 `/db/model` )
-2. 数据库脚本(按规范放于 `/db/script`)
+1. 数据库设计(按规范放于 `model` )
+2. 数据库脚本(按规范放于 `src/main/resources/db/change-log`)
 3. 创建数据库
    初次学习，`数据库名/用户名/密码` 请使用项目名，也就是 **hlw**
 
-- 数据库设计及脚本请参考: <https://github.com/rebue/hlw/tree/master/db>
+- 数据库设计及脚本请参考: <https://github.com/rebue/hlw/tree/master/>
 
-### 2.4. 生成代码
+### 2.4. 调试运行
+
+#### 2.4.1. 初始化运行
+
+以 **Spring Boot App** 方式运行 **xxx-svr** 项目(右键单击项目 > `Debug As` > `Spring Boot App`)，主要是通过启动的过程初始化数据库，启动完成后看日志正常后可停止运行。
+
+#### 2.4.2. 生成代码
 
 根据数据库结构生成代码
 
@@ -103,19 +109,19 @@ docker network create --attachable rebue
 - 只要数据结构有改动既可反复生成，但是要**注意，如果代码有过修改，请在修改的时候去掉其上方有注解 `@mbg.generated` 的行，否则重新生成代码时会被覆盖**
 - 生成代码后，imports部分并没有organize。这时可以打开 `Package Explorer` 视图 > 选择项目(可以多选) > 按 **Cmd+Shift+O** 即可。
 
-### 2.5. 运行
+#### 2.4.3. 正式运行
 
 以 **Spring Boot App** 方式运行 **xxx-svr** 项目(右键单击项目 > `Debug As` > `Spring Boot App`)
 
-### 2.6. 测试
+### 2.5. 测试
 
 运行 **xxx-svr** 项目 `src/test/java` 下的测试程序(右击测试文件 > `Run As` > `Junit Test`)，查看日志，检查是否正常通过
 
-### 2.7. 生成API文档
+### 2.6. 生成API文档
 
 Maven Build时，设置Goals为 `clean smart-doc:html` 或 `clean smart-doc:markdown`
 
-### 2.8. 管理API文档
+### 2.7. 管理API文档
 
 - torna 使用指南请参考: <https://github.com/rebue/archetype/blob/1.2.4/src/main/resources/archetype-resources/doc/torna%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/index.md>
 
