--- a/src/main/resources/archetype-resources/doc/微服务快速开发指南/微服务快速开发指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务快速开发指南/微服务快速开发指南.md
@@ -123,7 +123,7 @@ Maven Build时，设置Goals为 `clean smart-doc:html` 或 `clean smart-doc:mark
 
 ### 2.7. 管理API文档
 
-- torna 使用指南请参考: <https://github.com/rebue/archetype/blob/1.2.4/src/main/resources/archetype-resources/doc/torna%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/index.md>
+- torna 使用指南请参考: <https://github.com/rebue/archetype/blob/master/src/main/resources/archetype-resources/doc/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E5%BF%AB%E9%80%9F%E5%BC%80%E5%8F%91%E6%8C%87%E5%8D%97/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E5%BF%AB%E9%80%9F%E5%BC%80%E5%8F%91%E6%8C%87%E5%8D%97.md>
 
 ## 3. 常见问题
 
