--- a/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
@@ -2,36 +2,26 @@
 
 [TOC]
 
-## 1. 常见要暴露的端口
+## 1. 修改UTF-8和hostname
 
-注意需要浏览器访问的端口应避免分配 [err_unsafe_port](err_unsafe_port.md) 的端口
+<https://github.com/nnzbz/notes/blob/master/linux/base/Linux%E5%B8%B8%E7%94%A8%E5%91%BD%E4%BB%A4.md>
 
-- SSH
-  18022:22
-- ngnix反向代理
-  18080:80/18443:443
-- nexus
-  18081:8081/18082:8082/18083:8083
-- minio
-  9000/9001
-- torna
-  7700
-- xxl_job_admin
-  11080:8080
-- nacos
-  8848/8849/8850
-- zipkin
-  9411
+## 2. 启用SELinux
 
-## 2. 修改hostname
+## 3. 打开防火墙
 
-<https://github.com/nnzbz/notes/blob/master/linux/03.Linux%E5%B8%B8%E7%94%A8%E5%91%BD%E4%BB%A4.md>
+常见要暴露的端口，注意需要浏览器访问的端口应避免分配 [err_unsafe_port](err_unsafe_port.md) 的端口
 
-## 3. 同步网络更新服务器时间
+| SSH  | ngnix     | nexus                | minio        | torna | xxl_job_admin | nacos                | zipkin |
+| :--- | --------- | -------------------- | ------------ | ----- | ------------- | -------------------- | ------ |
+| 22   | 80<br>443 | 8081<br>8082<br>8083 | 9000<br>9001 | 7700  | 8080          | 8848<br>8849<br>8850 | 9411   |
+
+
+## 4. 同步网络更新服务器时间
 
 <https://github.com/nnzbz/notes/blob/master/linux/07.%E5%90%8C%E6%AD%A5%E7%BD%91%E7%BB%9C%E6%97%B6%E9%97%B4.md>
 
-## 4. 安装Docker及相关环境
+## 5. 安装Docker及相关环境
 
 - Docker
   <https://github.com/nnzbz/notes/blob/master/docker/Docker%E5%85%A5%E9%97%A8.md>
@@ -41,7 +31,7 @@
   上一篇的 `共享存储NFS` 章节
 
 
-## 5. 创建虚拟网络
+## 6. 创建虚拟网络
 
 创建虚拟网络提供给docker容器互联使用，在 `Manager` 节点运行如下命令:
 
@@ -49,7 +39,7 @@
 docker network create -d overlay --attachable rebue
 ```
 
-## 6. 创建并运行常用容器
+## 7. 创建并运行常用容器
 
 **注意:** 请使用文档中的 `Swarm` 安装方案，在 Docker Compose文件中加入如下内容，以便容器能互联互通
 
