--- a/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
+++ b/src/main/resources/archetype-resources/doc/微服务环境搭建指南/微服务环境搭建指南.md
@@ -4,9 +4,11 @@
 
 ## 1. 修改UTF-8和hostname
 
-<https://github.com/nnzbz/notes/blob/master/linux/base/Linux%E5%B8%B8%E7%94%A8%E5%91%BD%E4%BB%A4.md>
+<https://github.com/nnzbz/notes/blob/master/linux/base/Linux%E5%B8%B8%E7%94%A8%E6%93%8D%E4%BD%9C.md>
 
 ## 2. 启用SELinux
+
+<https://github.com/nnzbz/notes/blob/master/linux/security/SELinux%E5%85%A5%E9%97%A8.md>
 
 ## 3. 打开防火墙
 
@@ -16,22 +18,22 @@
 | :--- | --------- | -------------------- | ------------ | ----- | ------------- | -------------------- | ------ |
 | 22   | 80<br>443 | 8081<br>8082<br>8083 | 9000<br>9001 | 7700  | 8080          | 8848<br>8849<br>8850 | 9411   |
 
-
 ## 4. 同步网络更新服务器时间
 
-<https://github.com/nnzbz/notes/blob/master/linux/07.%E5%90%8C%E6%AD%A5%E7%BD%91%E7%BB%9C%E6%97%B6%E9%97%B4.md>
+<https://github.com/nnzbz/notes/blob/master/linux/base/%E5%90%8C%E6%AD%A5%E7%BD%91%E7%BB%9C%E6%97%B6%E9%97%B4.md>
 
-## 5. 安装Docker及相关环境
+## 5. 共享存储NFS
+  
+<https://github.com/nnzbz/notes/blob/master/linux/base/%E5%85%B1%E4%BA%AB%E5%AD%98%E5%82%A8NFS.md>
+
+## 6. 安装Docker及相关环境
 
 - Docker
   <https://github.com/nnzbz/notes/blob/master/docker/Docker%E5%85%A5%E9%97%A8.md>
 - Swarm
   <https://github.com/nnzbz/notes/blob/master/docker/Swarm/Swarm%E7%AE%80%E4%BB%8B.md>
-- NFS
-  上一篇的 `共享存储NFS` 章节
 
-
-## 6. 创建虚拟网络
+## 7. 创建虚拟网络
 
 创建虚拟网络提供给docker容器互联使用，在 `Manager` 节点运行如下命令:
 
@@ -39,7 +41,7 @@
 docker network create -d overlay --attachable rebue
 ```
 
-## 7. 创建并运行常用容器
+## 8. 创建并运行常用容器
 
 **注意:** 请使用文档中的 `Swarm` 安装方案，在 Docker Compose文件中加入如下内容，以便容器能互联互通
 
